fix padding on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,6 +15,6 @@
 
 @media screen and (max-width: 900px) {
   .location-and-daily-forecast {
-    padding: 0rem 1rem;
+    padding: 0rem 0.5rem;
   }
 }
